# zerp

./: Cargo.toml  LICENCE  README.md
src/: cli.rs  completion.rs  config.rs  fzf.rs  main.rs  state.rs
