[package]
name = "zerp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.50"
colored = "3.0.0"
config = "0.15.11"
dialoguer = "0.11"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
tempfile = "3.19.1"
toml = "0.8.22"
